# Rust-API

./: .env  Cargo.toml  LICENSE  docker-compose.yml  test.http
migrations/: 20240523014523_create_users_table.up.sql
src/: handler.rs  main.rs  model.rs  route.rs  schema.rs
